cluster/apps/home-automation/deconz/middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: deconz-mw
  namespace: default
spec:
  stripPrefixRegex:
    regex:
      - "/deconz"
