cluster/apps/home-automation/deconz/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deconz-deployment
  labels:
    app: deconz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deconz
  template:
    metadata:
      labels:
        app: deconz
    spec:
      restartPolicy: Always
      containers:
        - name: deconz
          image: deconzcommunity/deconz:stable
          ports:
            - containerPort: 80
              name: "http"
          volumeMounts:
            - name: deconz-volume
              mountPath: /opt/deCONZ
            - name: ttyacm
              mountPath: /dev/ttyACM0
          securityContext:
            privileged: true

      volumes:
        - name: deconz-volume
          persistentVolumeClaim:
            claimName: deconz-local-path-claim
        - name: ttyacm
          hostPath:
            path: /dev/ttyACM0
            type: CharDevice
