cluster/apps/home-automation/deconz/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: deconz
  labels:
    app: deconz
spec:
  ports:
    - port: 808
      targetPort: deconz
  selector:
    app: deconz
  type: ClusterIP
