cluster/apps/home-automation/deconz/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: deconz-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`deconz.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: deconz
          port: 80
          scheme: http
      middlewares:
        - name: traefik-forward-auth.networking.svc.cluster.local
          namespace: networking
  tls:
    secretName: "${SECRET_CERTIFICATE_DEFAULT}"
