cluster/apps/home-automation/deconz/ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: deconz-ingress
  annotations:
    traefik.frontend.rule.type: PathPrefixStrip
    ingress.kubernetes.io/whitelist-x-forwarded-for: "true"
    traefik.ingress.kubernetes.io/preserve-host: "true"
    # traefik.ingress.kubernetes.io/whitelist-source-range: "192.168.0.0/24"
    # traefik.ingress.kubernetes.io/router.middlewares: home-automation-deconz-mw@kubernetescrd
spec:
  rules:
    - http:
        paths:
          # - path: /
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: deconz
          #       port:
          #         name: "http"
          - path: /deconz
            pathType: Prefix
            backend:
              service:
                name: deconz
                port:
                  name: "http"
